--- a/server/app/view/index.ejs
+++ b/server/app/view/index.ejs
@@ -62,10 +62,24 @@
 			</div>
 			<!-- /container -->
 		</div>
+		<div id='selectbox'>
+			
+		</div>
+		<div id="errorgrid">
+			
+		</div>
+		<!-- chart placeholder-->
+		<div class="chart-content">
+			<div id="main" style="width: 100%;height:500px"></div>
+		</div>
+		<!-- end chart placeholder-->
     </div>
 </body>
 </html>
+<script src="/vendor/js/plugins/immutable.js"></script>
 <script src="/config/index.js"></script>
 <script src="/vendor/js/jquery/jquery-2.1.0.min.js"></script>
 <script src="/vendor/js/bootstrap/bootstrap.min.js"></script>
+<script src="/vendor/js/plugins/bootstrap-multiselect/bootstrap-multiselect.js"></script>
+<script src="/vendor/js/plugins/echarts.min.js"></script>
 <script src="/pageScripts/index.js"></script>
